--- a/index.html
+++ b/index.html
@@ -1,10 +1,172 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Benvenuto!</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FRQGAN4AD Project</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+        header {
+            background-color: white;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 1000;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0.5rem 2rem;
+        }
+        header .logo {
+            display: flex;
+            align-items: center;
+        }
+        header .logo img {
+            height: 100px;
+            margin-right: 10px;
+        }
+        header nav {
+            display: flex;
+            gap: 4.5rem;
+        }
+        header nav a {
+            color: #003865;
+            text-decoration: none;
+            font-weight: 500;
+            font-size: 1rem;
+        }
+        header nav a:hover {
+            text-decoration: underline;
+        }
+        .hero {
+            margin-top: 80px; /* Adjusted to account for fixed header */
+            background: linear-gradient(rgba(0, 56, 101, 0.8), rgba(0, 56, 101, 0.8)), url('./network-banner.png') center/cover no-repeat;
+            color: white;
+            text-align: center;
+            padding: 4rem 2rem;
+        }
+        .hero h2 {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+        }
+        .hero p {
+            font-size: 1.2rem;
+            line-height: 1.6;
+        }
+        .flag {
+            height: 20px;
+            margin-left: 10px;
+        }
+        section {
+            padding: 2rem;
+            margin: auto;
+            max-width: 900px;
+            background: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-top: 2rem;
+            border-radius: 8px;
+        }
+        .section-title {
+            color: #003865;
+            margin-bottom: 1rem;
+            font-size: 1.8rem;
+            font-weight: 700;
+        }
+        footer {
+            text-align: center;
+            padding: 2rem;
+            background: #003865;
+            color: white;
+            margin-top: 2rem;
+        }
+        footer a {
+            color: #ffd700;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        ul li {
+            margin-bottom: 0.5rem;
+        }
+    </style>
 </head>
 <body>
-    <h1>Benvenuto nel mio sito!</h1>
-    <p>Questa è la mia pagina GitHub personale.</p>
+
+<header>
+    <div class="logo">
+        <img src="./logo.png" alt="Project Logo">
+        <!--<span>FRQGAN4AD</span>-->
+    </div>
+    <nav>
+        <a href="./project.html">Project</a>
+        <a href="partners.html">Partners</a>
+        <a href="#news">News</a>
+        <a href="#contacts">Contacts</a>
+        <span></span>
+        <span></span>
+    </nav>
+</header>
+
+<div class="hero">
+    <h2>Exploring Quantum Technologies for Next-Generation Internet</h2>
+    <p>Enhancing anomaly detection and cybersecurity with federated quantum generative adversarial networks.</p>
+</div>
+
+<section id="about">
+    <h2 class="section-title">About the Project</h2>
+    <p>
+        FRQGAN4AD is a cutting-edge project funded by the European Union under the NGI Sargasso framework. This initiative explores the use of Quantum Generative Adversarial Networks (QGANs) to enhance anomaly detection in Next-Generation Internet (NGI) networks. By integrating quantum computing with federated learning, FRQGAN4AD addresses privacy concerns while tackling cybersecurity challenges in diverse network traffic.
+    </p>
+</section>
+
+<section id="challenge">
+    <h2 class="section-title">Challenge</h2>
+    <p>
+        Modern cybersecurity demands advanced solutions. Generative Adversarial Networks (GANs), a highlight in GenAI literature, offer promising avenues for anomaly detection. However, training GANs effectively is challenging due to the complexity of finding optimal adversarial training points, which classical computing often struggles to achieve. Quantum computing provides a revolutionary alternative, offering efficient solutions to problems classical models cannot handle.
+    </p>
+    <p>
+        FRQGAN4AD leverages QGANs within a federated architecture to address these challenges. This approach not only enhances anomaly detection in NGI but also mitigates the privacy risks associated with centralized GAN training, paving the way for robust, scalable cybersecurity solutions.
+    </p>
+</section>
+
+<section id="alignment">
+    <h2 class="section-title">Alignment with NGI Initiative</h2>
+    <p>
+        The NGI initiative seeks to build an Internet of Trust, emphasizing security and resilience. Anomaly detection plays a crucial role in achieving this vision by enabling accurate and timely responses to faults, attacks, and disruptions. FRQGAN4AD aligns with these goals, addressing challenges identified by ENISA and contributing to the EU’s Digital Decade strategy. Moreover, the project’s alignment with Canada’s National Quantum Strategy underscores its global relevance and impact.
+    </p>
+</section>
+
+<section id="details">
+    <h2 class="section-title">Project Details</h2>
+    <ul>
+        <li><strong>Duration:</strong> 9 months (from 9th January 2024)</li>
+        <li><strong>Partners:</strong>
+            <ul>
+                <li>University of Salerno, Italy &ndash; Christian Esposito (<a href="mailto:esposito@unisa.it">esposito@unisa.it</a>)<img src="./italianflag.jpg" alt="Italian flag" class="flag"></li>
+                <li>École de Technologie Supérieure, Canada &ndash; Rami Langar (<a href="mailto:rami.langar@etsmtl.ca">rami.langar@etsmtl.ca</a>)<img src="./canadianflag.jpg" alt="Canadian flag" class="flag"></li>
+            </ul>
+        </li>
+        <li><strong>Funding:</strong> European Union’s Horizon Europe Research and Innovation program (Grant Agreement No. 101092887)</li>
+    </ul>
+</section>
+
+<footer>
+    <p>For more information, contact us at <a href="mailto:esposito@unisa.it">esposito@unisa.it</a> or <a href="mailto:rami.langar@etsmtl.ca">rami.langar@etsmtl.ca</a>.</p>
+    <p>&copy; 2024 FRQGAN4AD Project. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
