partners, news and contacts

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
         <!--<span>FRQGAN4AD</span>-->
     </div>
     <nav>
-        <a href="./project.html">Project</a>
+        <a href="project.html">Project</a>
         <a href="partners.html">Partners</a>
-        <a href="#news">News</a>
-        <a href="#contacts">Contacts</a>
+        <a href="news.html">News</a>
+        <a href="contacts.html">Contacts</a>
         <span></span>
         <span></span>
     </nav>
@@ -164,8 +164,8 @@
 </section>
 
 <footer>
-    <p>For more information, contact us at <a href="mailto:esposito@unisa.it">esposito@unisa.it</a> or <a href="mailto:rami.langar@etsmtl.ca">rami.langar@etsmtl.ca</a>.</p>
-    <p>&copy; 2024 FRQGAN4AD Project. All rights reserved.</p>
+    <p>For more information, contact us at <a href="mailto:esposito@unisa.it">esposito@unisa.it</a> or <a href="mailto:fracirillo@unisa.it">fracirillo@unisa.it</a>.</p>
+    <p>&copy; 2025 FRQGAN4AD Project. All rights reserved.</p>
 </footer>
 
 </body>
