--- a/partners.html
+++ b/partners.html
@@ -61,6 +61,17 @@
             font-size: 1.8rem;
             font-weight: 700;
         }
+        .image-placeholder {
+            height: 200px;
+            background-color: #ddd;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 1rem;
+            color: #555;
+            margin-bottom: 1rem;
+            border-radius: 8px;
+        }
         footer {
             text-align: center;
             padding: 2rem;
@@ -98,23 +109,40 @@
     <h2>Collaboration Across Continents</h2>
 </div>
 
-<section id="partners">
-    <h2 class="section-title">ETS Collaboration</h2>
+<section id="unisa">
+    <h2 class="section-title">University of Salerno (UNISA)</h2>
+    <img src="unisa.jpg" style="width:100%; border-radius:8px;">
     <p>
-        As part of the FRQGAN4AD project, École de Technologie Supérieure (ETS) in Canada contributes significantly with its advanced tool suites. Under the guidance of Prof. Rami Langar, ETS will provide access to the Kirq Quantum Communication test bed (<a href="https://kirq.numana.tech/en/" target="_blank">https://kirq.numana.tech/en/</a>) offered by Numana. 
+        Located in Fisciano, Italy, the University of Salerno (UNISA) is a prominent academic institution known for its commitment to excellence in education and research. UNISA offers a wide range of programs and has a strong focus on fostering innovation and collaboration across various disciplines.
+    </p>
+</section>
+
+<section id="ets">
+    <h2 class="section-title">École de Technologie Supérieure (ÉTS)</h2>
+    <img src="ets.jpeg" style="width:100%; border-radius:8px;">
+    <p>
+        École de Technologie Supérieure (ÉTS), situated in Montreal, Canada, specializes in engineering and technology education. Under the leadership of Prof. Rami Langar, ÉTS contributes significantly to the FRQGAN4AD project by providing access to advanced quantum communication test beds, facilitating cutting-edge research and development.
+    </p>
+</section>
+
+<section id="numana">
+    <h2 class="section-title">Numana</h2>
+    <img src="numana.jpg" style="width:100%; border-radius:8px;">
+    <p>
+        Numana is a catalyst for the technological ecosystem in Quebec, focusing on emerging technologies and disruptive models that will shape the future. By identifying and promoting innovative technologies, Numana plays a crucial role in fostering collaboration between academia and industry, thereby contributing to the advancement of the FRQGAN4AD project's objectives.
     </p>
 </section>
 
 <section id="innovation">
     <h2 class="section-title">Innovation and Impact</h2>
     <p>
-        This collaboration between ETS and the EU partner aims to foster innovation, develop commercial opportunities, and attract global telecom sector stakeholders and industries focused on future 6G technologies. By leveraging complementary expertise, this partnership will pioneer cross-Atlantic experimental setups and create a robust framework for network anomaly detection. 
+        This collaboration aims to foster innovation, develop commercial opportunities, and attract global telecom sector stakeholders and industries focused on future 6G technologies. By leveraging complementary expertise, this partnership will pioneer cross-Atlantic experimental setups and create a robust framework for network anomaly detection. 
     </p>
 </section>
 
 <footer>
-    <p>For more information, contact us at <a href="mailto:esposito@unisa.it">esposito@unisa.it</a> or <a href="mailto:rami.langar@etsmtl.ca">rami.langar@etsmtl.ca</a>.</p>
-    <p>&copy; 2024 FRQGAN4AD Project. All rights reserved.</p>
+    <p>For more information, visit the <a href="index.html">FRQGAN4AD Home Page</a>.</p>
+    <p>&copy; 2025 FRQGAN4AD Project. All rights reserved.</p>
 </footer>
 
 </body>
