--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FRQGAN4AD Project</title>
+    <title>FRQGAN4AD Project - Contacts</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -61,15 +61,20 @@
             font-size: 1.8rem;
             font-weight: 700;
         }
-        .image-container {
-            text-align: center;
-            margin: 2rem 0;
+        .contact {
+            margin-bottom: 1.5rem;
         }
-        .image-container img {
-            max-width: 20%;
-            height: auto;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        .linkedin {
+            text-align: center;
+            margin-top: 1rem;
+        }
+        .linkedin a {
+            color: #0073b1;
+            text-decoration: none;
+            font-weight: 500;
+        }
+        .linkedin a:hover {
+            text-decoration: underline;
         }
         footer {
             text-align: center;
@@ -91,54 +96,42 @@
 
 <header>
     <div class="logo">
-        <a href="index.html"><img src="./logo.png" alt="Project Logo"></a>
+        <img src="./logo.png" alt="Project Logo">
     </div>
     <nav>
         <a href="index.html">Home</a>
-        <a href="#">Project</a>
+        <a href="project.html">Project</a>
         <a href="partners.html">Partners</a>
-        <a href="index.html#news">News</a>
-        <a href="index.html#contacts">Contacts</a>
+        <a href="news.html">News</a>
+        <a href="contacts.html">Contacts</a>
         <span></span>
         <span></span>
     </nav>
 </header>
 
-<section id="project">
-    <h2 class="section-title">The FRQGAN4AD Project</h2>
-    <p>
-        The FRQGAN4AD Project combines quantum mechanics and generative AI to develop a Quantum Generative Adversarial Network (QGAN) for network anomaly detection. By addressing the challenges of quantum noise and the need for distributed computation, the project innovates through federated QGANs secured with blockchain.
-    </p>
-
-    <h3 class="section-title">Key Highlights</h3>
-    <ul>
-        <li>Utilizes QGANs to generate high-quality data for detecting network anomalies.</li>
-        <li>Implements a federated approach to train models locally and aggregate results securely.</li>
-        <li>Integrates blockchain to ensure traceability in federated learning.</li>
-    </ul>
-
-    <div class="image-container">
-        <img src="./qgan.jpg" alt="Quantum GAN Diagram">
-        <p>Quantum GAN training process.</p>
+<section id="contacts">
+    <h2 class="section-title">Contact Us</h2>
+    <div class="contact">
+        <h3>Christancarmine Esposito</h3>
+        <p>Email: <a href="mailto:esposito@unisa.it">esposito@unisa.it</a></p>
     </div>
-
-    <h3 class="section-title">Innovation</h3>
-    <p>
-        The project pioneers the use of QGANs in anomaly detection for next-generation networks (NGIs). It also introduces a federated model compliant with EU AI regulations, integrating human-in-the-loop (HITL) strategies for enhanced compliance and transparency.
-    </p>
-
-    <div class="image-container">
-        <img src="./federated.png" alt="Federated Learning Diagram">
-        <p>Federated QGAN approach.</p>
+    <div class="contact">
+        <h3>Franco Cirillo</h3>
+        <p>Email: <a href="mailto:fracirillo@unisa.it">fracirillo@unisa.it</a></p>
     </div>
+    <div class="linkedin">
+    <p>Stay connected and follow us on LinkedIn:</p>
+    <a href="https://www.linkedin.com/company/frqgan4ad-project" target="_blank">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#0073b1" viewBox="0 0 24 24" style="vertical-align: middle; margin-right: 8px;">
+            <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.026-3.037-1.853-3.037-1.854 0-2.14 1.446-2.14 2.939v5.667h-3.554v-11.5h3.414v1.57h.049c.476-.899 1.637-1.847 3.368-1.847 3.602 0 4.269 2.37 4.269 5.452v6.325zm-15.087-13.237c-1.144 0-2.071-.928-2.071-2.072 0-1.143.928-2.071 2.071-2.071 1.145 0 2.072.928 2.072 2.071 0 1.145-.928 2.072-2.072 2.072zm1.777 13.237h-3.554v-11.5h3.554v11.5zm17.863-20.452h-22v24h22v-24z"/>
+        </svg>
+        FRQGAN4AD Project LinkedIn Page
+    </a>
+</div>
 
-    <p>
-        The project’s outcomes, including software and datasets, will be open-sourced on GitHub to promote collaboration within academic and industrial communities.
-    </p>
 </section>
 
 <footer>
-    <p>For more information, visit the <a href="index.html">FRQGAN4AD Home Page</a>.</p>
     <p>&copy; 2025 FRQGAN4AD Project. All rights reserved.</p>
 </footer>
 
