--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FRQGAN4AD Project</title>
+    <title>FRQGAN4AD Project - News</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -61,15 +61,25 @@
             font-size: 1.8rem;
             font-weight: 700;
         }
-        .image-container {
-            text-align: center;
-            margin: 2rem 0;
-        }
-        .image-container img {
-            max-width: 20%;
-            height: auto;
+        .news-post {
+            margin-bottom: 2rem;
+            padding: 1.5rem;
+            background: #f9f9fc;
+            border: 1px solid #ddd;
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .news-post h3 {
+            color: #003865;
+            margin-bottom: 0.5rem;
+            font-size: 1.5rem;
+            font-weight: 700;
+        }
+        .news-post p {
+            line-height: 1.6;
+        }
+        .hashtags {
+            color: #0073b1;
+            font-weight: 500;
         }
         footer {
             text-align: center;
@@ -91,54 +101,47 @@
 
 <header>
     <div class="logo">
-        <a href="index.html"><img src="./logo.png" alt="Project Logo"></a>
+        <img src="./logo.png" alt="Project Logo">
     </div>
     <nav>
         <a href="index.html">Home</a>
-        <a href="#">Project</a>
+        <a href="project.html">Project</a>
         <a href="partners.html">Partners</a>
-        <a href="index.html#news">News</a>
-        <a href="index.html#contacts">Contacts</a>
+        <a href="news.html">News</a>
+        <a href="contacts.html">Contacts</a>
         <span></span>
         <span></span>
     </nav>
 </header>
 
-<section id="project">
-    <h2 class="section-title">The FRQGAN4AD Project</h2>
-    <p>
-        The FRQGAN4AD Project combines quantum mechanics and generative AI to develop a Quantum Generative Adversarial Network (QGAN) for network anomaly detection. By addressing the challenges of quantum noise and the need for distributed computation, the project innovates through federated QGANs secured with blockchain.
-    </p>
-
-    <h3 class="section-title">Key Highlights</h3>
-    <ul>
-        <li>Utilizes QGANs to generate high-quality data for detecting network anomalies.</li>
-        <li>Implements a federated approach to train models locally and aggregate results securely.</li>
-        <li>Integrates blockchain to ensure traceability in federated learning.</li>
-    </ul>
-
-    <div class="image-container">
-        <img src="./qgan.jpg" alt="Quantum GAN Diagram">
-        <p>Quantum GAN training process.</p>
+<section id="news">
+    <h2 class="section-title">News</h2>
+    
+    <!-- Example News Post -->
+    <div class="news-post">
+        <h3>Exciting News: FRQGAN4AD Selected for NGI Sargasso OnCampus Program!</h3>
+        <p>
+            We are excited to announce that <strong>FRQGAN4AD: Federated and Robust Quantum Generative Adversarial Networks for Anomaly Detection in Future Internet</strong> has been selected as one of the 12 innovative projects for the NGI Sargasso OnCampus Program! 🚀
+        </p>
+        <p>
+            This project is a collaboration between <strong>Università degli Studi di Salerno</strong>, <strong>École de technologie supérieure (ÉTS)</strong>, and <strong>Numana</strong>, combining expertise to leverage Quantum Generative AI for revolutionizing anomaly detection in the Next-Generation Internet. 
+        </p>
+        <p>
+            Our goal is to analyze traffic traces to identify potential attacks while tackling quantum noise and managing the scale of modern networks through a federated and robust approach. 🌐⚛️
+        </p>
+        <p>
+            We’re pleased to be part of this amazing group of innovators, building transatlantic connections to shape the future of the Internet!
+        </p>
+        <p>
+            Thank you, NGI Sargasso, for this incredible opportunity. Stay tuned for updates on our journey! ✨
+        </p>
+        <p class="hashtags">
+            #NGISargasso #NGISargassoInnovators #NextGenerationInternet #QuantumComputing #QuantumAI #QuantumSecurity
+        </p>
     </div>
-
-    <h3 class="section-title">Innovation</h3>
-    <p>
-        The project pioneers the use of QGANs in anomaly detection for next-generation networks (NGIs). It also introduces a federated model compliant with EU AI regulations, integrating human-in-the-loop (HITL) strategies for enhanced compliance and transparency.
-    </p>
-
-    <div class="image-container">
-        <img src="./federated.png" alt="Federated Learning Diagram">
-        <p>Federated QGAN approach.</p>
-    </div>
-
-    <p>
-        The project’s outcomes, including software and datasets, will be open-sourced on GitHub to promote collaboration within academic and industrial communities.
-    </p>
 </section>
 
 <footer>
-    <p>For more information, visit the <a href="index.html">FRQGAN4AD Home Page</a>.</p>
     <p>&copy; 2025 FRQGAN4AD Project. All rights reserved.</p>
 </footer>
 
