--- a/index.html
+++ b/index.html
@@ -23,31 +23,60 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 0.5rem 2rem;
-        }
-        header .logo {
-            display: flex;
-            align-items: center;
-        }
-        header .logo img {
-            height: 100px;
-            margin-right: 10px;
+            padding: 0.5rem 1rem;
         }
         header nav {
             display: flex;
-            gap: 4.5rem;
+            margin-right: 3rem; /* Adds consistent spacing for all links collectively */
         }
-        header nav a {
+        .logo {
+            display: flex;
+            align-items: center;
+        }
+        .logo img {
+            height: 60px;
+            margin-right: 10px;
+        }
+        .flag {
+            height: 20px;
+            margin-left: 10px;
+        }
+        nav {
+            display: none;
+            flex-direction: column;
+            position: absolute;
+            top: 70px;
+            right: 0.1rem;
+            background-color: white;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            border-radius: 8px;
+            overflow: hidden;
+        }
+        nav a {
             color: #003865;
             text-decoration: none;
             font-weight: 500;
             font-size: 1rem;
+            padding: 0.8rem 1.5rem;
+            display: block;
         }
-        header nav a:hover {
-            text-decoration: underline;
+        nav a:hover {
+            background-color: #f4f4f9;
+        }
+        .menu-icon {
+            display: flex;
+            flex-direction: column;
+            cursor: pointer;
+            gap: 5px;
+            margin-right: 2rem;
+        }
+        .menu-icon div {
+            width: 25px;
+            height: 3px;
+            background-color: #003865;
         }
         .hero {
-            margin-top: 80px; /* Adjusted to account for fixed header */
+            margin-top: 80px;
             background: linear-gradient(rgba(0, 56, 101, 0.8), rgba(0, 56, 101, 0.8)), url('./network-banner.png') center/cover no-repeat;
             color: white;
             text-align: center;
@@ -60,10 +89,6 @@
         .hero p {
             font-size: 1.2rem;
             line-height: 1.6;
-        }
-        .flag {
-            height: 20px;
-            margin-left: 10px;
         }
         section {
             padding: 2rem;
@@ -94,12 +119,18 @@
         footer a:hover {
             text-decoration: underline;
         }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        ul li {
-            margin-bottom: 0.5rem;
+        @media (min-width: 768px) {
+            nav {
+                display: flex !important;
+                flex-direction: row;
+                position: static;
+                box-shadow: none;
+                background: none;
+                border-radius: 0;
+            }
+            .menu-icon {
+                display: none;
+            }
         }
     </style>
 </head>
@@ -108,15 +139,17 @@
 <header>
     <div class="logo">
         <img src="./logo.png" alt="Project Logo">
-        <!--<span>FRQGAN4AD</span>-->
     </div>
-    <nav>
+    <div class="menu-icon" onclick="toggleMenu()">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    <nav id="navMenu" style="display: none;">
         <a href="project.html">Project</a>
         <a href="partners.html">Partners</a>
         <a href="news.html">News</a>
         <a href="contacts.html">Contacts</a>
-        <span></span>
-        <span></span>
     </nav>
 </header>
 
@@ -168,5 +201,19 @@
     <p>&copy; 2025 FRQGAN4AD Project. All rights reserved.</p>
 </footer>
 
+<script>
+    let isMenuOpen = false;
+
+    function toggleMenu() {
+        const navMenu = document.getElementById('navMenu');
+        isMenuOpen = !isMenuOpen;
+        navMenu.style.display = isMenuOpen ? 'flex' : 'none';
+    }
+</script>
+
 </body>
 </html>
+
+
+
+
