--- a/partners.html
+++ b/partners.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FRQGAN4AD Project</title>
+    <link rel="icon" type="image/png" href="logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -86,7 +87,7 @@
             max-width: 900px;
             background: white;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin-top: 2rem;
+            margin-top: 5rem;
             border-radius: 8px;
         }
         .section-title {
@@ -155,9 +156,6 @@
     </nav>
 </header>
 
-<div class="hero">
-    <h2>Collaboration Across Continents</h2>
-</div>
 
 <section id="unisa">
     <h2 class="section-title">University of Salerno (UNISA)</h2>
