Articles and presentations

--- a/project.html
+++ b/project.html
@@ -186,7 +186,36 @@
     <p>
         The project’s outcomes, including software and datasets, will be open-sourced on GitHub to promote collaboration within academic and industrial communities.
     </p>
+
+    <h2 class="section-title">Education Materials</h2>
+    <p>
+        To support dissemination and training, each article produced in the FRQGAN4AD project is complemented with dedicated presentations. These resources are made openly available for researchers, students, and practitioners.
+    </p>
+
+    <ul>
+        <li>
+            <strong>A QPUF-Based Scheme for Secure and Adaptable Quantum Device Attestation in NISQ Devices – </strong> International Conference on Quantum Communications, Networking, and Computing (QCNC 2025) March 31-April 2, 2025 · Nara, Japan<br>
+            <a href="./presentations/QCNC_cirillo - short.pptx" target="_blank">Presentation</a> | 
+            <a href="./papers/QCNC___PUF_Camera_ready.pdf" target="_blank">Article</a>
+        </li>
+        <li>
+            <strong>Intrusion detection using quantum generative adversarial networks: a federated approach with noisy simulators – </strong> IET Space and Communications Conference 2025<br>
+            <a href="./presentations/Cirillo_QGAN_IET.pptx" target="_blank">Presentation</a> | 
+            <a href="./papers/FedQGAN_noisy.pdf" target="_blank">Article</a>
+        </li>
+        <li>
+            <strong>Federated Quantum Generative Adversarial Network for Intrusion Detection – </strong> IEEE ICDCS 2025 (45th IEEE International Conference on Distributed Computing Systems)<br>
+            <a href="./presentations/ICDCSW_Poster.pdf" target="_blank">Poster</a> | 
+            <a href="./papers/FedQGAN_ICDCS.pdf" target="_blank">Article</a>
+        </li>
+        <li>
+            <strong>Quantum Machine Learning for Intrusion Detection on Noisy Quantum Computers – </strong> IEEE International Conference on Quantum Computing and Engineering 2025<br>
+            <a href="./presentations/tp68_QML_0905_cirillo.pptx" target="_blank">Presentation</a> | 
+            <a href="./papers/QML-771.pdf" target="_blank">Article</a>
+        </li>
+    </ul>
 </section>
+
 
 <footer>
     <p>For more information, visit the <a href="index.html">FRQGAN4AD Home Page</a>.</p>
